Fixed the problem of background dimming being stacked, and fixed the correct use of cleanupResources() function, also shifted almost everything from base.js to calendar.js
Background dimming stacking has been tackled by closing the +x more popover, and then displaying the event description modal.

cleanupResources() function now is only being called before calendar.refetchEvents() function call everywhere in calendar.js

--- a/Project/static/css/calendar.css
+++ b/Project/static/css/calendar.css
@@ -16,6 +16,10 @@ body {
   color: red;
 }
 
+.tooltip.bs-tooltip-auto.fade.show {
+  z-index: 9999999 !important;
+}
+
 /*!
  * FullCalendar v3.9.0
  * Docs & License: https://fullcalendar.io/
